[Refactor] 특정 게시글 조회 API 리팩토링 - 게시글 table에서 댓글 개수 정보 추가 관리 - 댓글 작성 및 수정 시 게시글이 삭제되었는지 확인 로직 추가 - 게시글, 댓글 좋아요 하지 않았을 때 굳이 DB에 저장 X - 게시글 Test 코드 리팩토링 및 테스트 코드 작성